fix(dropdown menu): fix layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,13 @@ body,
   height: 100%;
 }
 
+html body {
+
+  overflow-y: auto !important;
+  margin-right: 0 !important;
+  
+  }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
